added image, rewriting notes/comments

--- a/planarTruss.ipynb
+++ b/planarTruss.ipynb
@@ -4,17 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/dpholmes/DirectStiffnessMethod/blob/master/planarTruss.ipynb)"
+    "<h1>Direct Stiffness Method: Planar Truss</h1>\n",
+    "<h3>ME309: Structural Mechanics, Boston University</h3>\n",
+    "<h4>Prof. Douglas P. Holmes</h4>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1>Direct Stiffness Method: Planar Truss</h1>\n",
-    "<h3>Structural Mechanics, Boston University</h3>\n",
-    "<h4>Prof. Douglas P. Holmes</h4>\n",
-    "\n",
+    "<img src = \"https://upload.wikimedia.org/wikipedia/commons/3/37/Bu-bridge.jpg\" />\n",
+    "<a href=\"https://en.wikipedia.org/wiki/Boston_University_Bridge\">BU Bridge</a>, <i>steel truss through arch bridge</i>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The problem we're interested in solving is perhaps the simplest planar truss: <b>three bars</b> connected by <b>three pins</b> to form a right triangle. The lower left pin is where we will set the origin of our coordinate system, and it is resting on a simple support. The lower right pin forms the corner of the right triangle, and this support can roll in the horizontal ($x$) direction. We'll work with dimensionless quantities, and assign a length of $L=1$ to the sides adjacent and opposite to the origin. At the pin on the upper right of the truss, we'll apply a force whose components in the $x$ and $y$ directions are: $F_{x_3}=2$ and $F_{y_3}=1$, where the 3 denotes the number we'll assign to the node that the force is acting on. We'll assume that the bars of this truss can only withstand axial loading, and we will model them as <i>two-node bars</i>, i.e. linear springs with an effective spring stiffness of $k=EA/L$, where $E$ is Young's elastic modulus, and $A$ is the cross-sectional area. Our goal is to solve $\\mathbf{F}=\\mathbf{K}\\mathbf{u}$ for this structure.\n",
     "\n",
     "Our procedure for solving this problem will proceed as follows:\n",
@@ -28,8 +34,31 @@
     "        <li>Add each augmented $\\mathbf{K}_{el}$ to $\\mathbf{K}$</li>\n",
     "    </ol>\n",
     "    <li>The system is underdetermined, so next we removed the known/specified displacements from $\\mathbf{u}$ and solve for the displacements of the free nodes.</li>\n",
-    "    <li>To complete the problem, we solve for the unknown reaction forces in $\\mathbf{F}$.\n",
+    "    <li>To complete the problem, we solve for the unknown reaction forces in $\\mathbf{F}$.</li>\n",
     "</ol>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Python & Jupyter Notebooks\n",
+    "We will implement the direct stiffness method using <i>Python</i>. The best and easiest way to get <i>Python</i> and  is through [Anaconda](https://www.anaconda.com/distribution/). If you would like to play with this code without installing <i>Python</i> and <i>Jupyter Notebooks</i> locally, then you can open this code in Google Colab (open the link below in a new tab):"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/dpholmes/DirectStiffnessMethod/blob/master/planarTruss.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importing Python Libraries\n",
+    "In order to use mathematical functions, work with matrices, do symbolic calculations, and plot graphs, we will import a variety of python libraries:"
    ]
   },
   {
@@ -222,10 +251,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def XY(nodes, elements, i):\n",
+    "# given an element e, what are the (x,y) coordinates of each node?\n",
+    "def XY(nodes, elements, e):\n",
     "    return np.array([\n",
-    "        nodes[int(elements[i,0]-1)],\n",
-    "        nodes[int(elements[i,1]-1)]\n",
+    "        nodes[int(elements[e,0]-1)],\n",
+    "        nodes[int(elements[e,1]-1)]\n",
     "    ])"
    ]
   },
@@ -259,6 +289,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# not yet implemented...\n",
+    "def KelementLocal(XY, E, A):\n",
+    "    x1, y1, x2, y2 = XY[0,0], XY[0,1], XY[1,0], XY[1,1]\n",
+    "    \n",
+    "    L = math.sqrt((x2-x1)**2 + (y2-y1)**2)\n",
+    "    c = (x2-x1)/L\n",
+    "    s = (y2-y1)/L\n",
+    "    \n",
+    "    Kel = E*A/L*np.array([\n",
+    "        [1, 0, -1, 0],\n",
+    "        [0, 0, 0, 0],\n",
+    "        [-1, 0, 1, 0],\n",
+    "        [0, 0, 0, 0]\n",
+    "    ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# not yet implemented...\n",
+    "def TransformationMatrix2DElement():\n",
+    "    Te = np.array([\n",
+    "        [1, 0, -1, 0],\n",
+    "        [0, 0, 0, 0],\n",
+    "        [-1, 0, 1, 0],\n",
+    "        [0, 0, 0, 0]\n",
+    "    ])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
@@ -287,7 +355,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# augment the elemental stiffness matrix by adding rows & columns of zeroes at the missing nodes\n",
+    "# augment the elemental stiffness matrix by inserting the local stiffness matrix \n",
+    "# into the correct location within the global stiffness matrix.\n",
+    "# this could be done more efficiently, but i will add a visualization above to help identify what goes where\n",
+    "\n",
     "def Kaug(K, e, Kel, node_DoF):\n",
     "    i = elementDoF(node_DoF, elements, e)[0][0]\n",
     "    j = elementDoF(node_DoF, elements, e)[1][0]\n",
@@ -693,7 +764,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
